--- a/Grupo_L-war/src/main/webapp/LeerCentro.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerCentro.xhtml
@@ -18,15 +18,17 @@
 	<div class="inicio">
 		<h:button value="INICIO" outcome="Principal.xhtml" />
 	</div>
-	<div>
-		<p>
-			Hola,
-			<h:outputText value="#" />
-			.
-		</p>
-	</div>
+	
+	<ui:fragment rendered="#{not empty infoSesion.alumno}">
+	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
+	</ui:fragment>
+	<ui:fragment rendered="#{not empty infoSesion.personal}">	
+	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.personal.rango}"/>.</p></div>
+	</ui:fragment>
 
-	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
+	<h:form>
+	<div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div>
+	</h:form>
 	
 	<h1 class="titulo"> Leer Centro </h1>
 		
