--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -30,34 +30,34 @@
 	<ui:fragment rendered="#{not empty infoSesion.alumno}">
 		<div class="izquierda"   >
 			<b>MIS DATOS </b><br></br><br></br> 
-			<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
-			<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
+			<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
 			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
 			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
 			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
 			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
 	
 	
 	<div class="centro">
-		<h:button value="Rellenar encuesta" outcome="index.xhtml" /> <br></br><br></br>
-		<h:button value="Solicitar cambio de grupo" outcome="index.xhtml" />
+		<h:button value="Rellenar encuesta" outcome="RellenarEncuesta.xhtml" /> <br></br><br></br>
+		<h:button value="Solicitar cambio de grupo" outcome="SolicitarCambioGrupo.xhtml" />
 	</div>
 	</ui:fragment>
 	
 	<ui:fragment rendered="#{not empty infoSesion.personal}">		
 		<div class="centrado" >
-			<h:button value="Alumnos" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Matricula" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Grupos" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Expediente" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Titulacion" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Encuesta" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Asignaturas" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Centro" outcome="index.xhtml" /> <br></br><br></br>
-			<h:button value="Asignatura-Matricula" outcome="index.xhtml" />
+			<h:button value="Alumnos" outcome="LeerAlumnos.xhtml" /> <br></br><br></br>
+			<h:button value="Matricula" outcome="LeerMatricula.xhtml" /> <br></br><br></br>
+			<h:button value="Grupos" outcome="LeerGrupo.xhtml" /> <br></br><br></br>
+			<h:button value="Expediente" outcome="LeerExpediente.xhtml" /> <br></br><br></br>
+			<h:button value="Titulacion" outcome="LeerTitulacion.xhtml" /> <br></br><br></br>
+			<h:button value="Encuesta" outcome="LeerEncuesta.xhtml" /> <br></br><br></br>
+			<h:button value="Asignaturas" outcome="LeerAsignaturas.xhtml" /> <br></br><br></br>
+			<h:button value="Centro" outcome="LeerCentro.xhtml" /> <br></br><br></br>
+			<h:button value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" />
 		</div>
 	</ui:fragment>
 	
