--- a/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
@@ -14,8 +14,12 @@
 
 <h:body>
 	
+	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
+	
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
-	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
+	<h:form>
+	<div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div>
+	</h:form>
 	
 	<h1 class="titulo"> RELLENAR ENCUESTA </h1>
 
