--- a/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
@@ -16,15 +16,12 @@
 	<div class="inicio">
 		<h:button value="INICIO" outcome="Principal.xhtml" />
 	</div>
-	<div>
-		<p>
-			Hola,
-			<h:outputText value="#" />
-			.
-		</p>
-	</div>
-	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
 	
+	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
+	
+	<h:form>
+	<div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div>
+	</h:form>
 	<h1 class="titulo"> SOLICITAR CAMBIO DE GRUPO </h1>
 
 	<div class="izquierda">
