--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -57,7 +57,8 @@
 			<h:button value="Encuesta" outcome="LeerEncuesta.xhtml" /> <br></br><br></br>
 			<h:button value="Asignaturas" outcome="LeerAsignaturas.xhtml" /> <br></br><br></br>
 			<h:button value="Centro" outcome="LeerCentro.xhtml" /> <br></br><br></br>
-			<h:button value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" />
+			<h:button value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" /><br></br><br></br>
+			<h:button value="Exportar Datos" outcome="ExportarDatos.xhtml" /> 
 		</div>
 	</ui:fragment>
 	
