Arreglo de Leer Grupos y Centros_SECRETARIA

--- a/Grupo_L-war/src/main/webapp/LeerGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerGrupo.xhtml
@@ -52,7 +52,7 @@
              
              <h:column>
                  <f:facet name="header">Turno</f:facet>
-                 <h:outputText value="#{grupo.turno_Mañana_Tarde}"/>
+                 <h:outputText value="#{grupo.turno_Maniana_Tarde}"/>
              </h:column>
              
              <h:column>
