--- a/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
@@ -25,10 +25,11 @@
 
 	<h1 class="titulo"> IMPORTAR ASIGNATURA </h1>
 
-	<div class="centrado">
-	    <h:form>
-			<p:fileUpload listener="#{fileUploadView.handleFileUpload}" mode="advanced" dragDropSupport="true" update="messages" allowTypes="/(\.|\/)(csv|xls|xlsx)$/"/>
-			<p:growl id="messages" showDetail="true"/>
+	<div class="centrado">	
+	    <h:form enctype="multipart/form-data">
+			<p:fileUpload value="#{asignaturaBB.file}" mode="simple" skinSimple="true"/>
+            <p:commandButton value="Submit" ajax="false" action="#{asignaturaBB.upload}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
+            <p:growl id="messages" showDetail="true"/>
 		</h:form>
 	</div>
 
