--- a/Grupo_L-war/src/main/webapp/LeerAsignaturaMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAsignaturaMatricula.xhtml
@@ -50,19 +50,25 @@
 
 		<p:dataTable id="dtAsigM" value="#{grupoBB.asignaturasMatriculasAlumno}" var="asig">
 		
-			<p:column headerText="Matricula" filterBy="#{asig.matricula}"
+			
+			<p:column headerText="Matricula" filterBy="#{asig.matricula.num_Archivo}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{asig.matricula}" />
+				<p:outputLabel value="#{asig.matricula.num_Archivo}" />
 			</p:column>
 			
-			<p:column headerText="Asignatura" filterBy="#{asig.asignatura}"
+			<p:column headerText="Asignatura" filterBy="#{asig.asignatura.referencia}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{asig.asignatura}" />
+				<p:outputLabel value="#{asig.asignatura.referencia}" />
 			</p:column>
 			
-			<p:column headerText="Grupo" filterBy="#{asig.g_AM}"
+			<p:column headerText="Grupo_Curso" filterBy="#{asig.g_AM.curso}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{asig.g_AM}" />
+				<p:outputLabel value="#{asig.g_AM.curso}" />
+			</p:column>
+			
+			<p:column headerText="Grupo_Letra" filterBy="#{asig.g_AM.letra}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{asig.g_AM.letra}" />
 			</p:column>
 	 	</p:dataTable>
          
@@ -84,14 +90,19 @@
 				<p:outputLabel value="#{asig.matricula.num_Archivo}" />
 			</p:column>
 			
-			<p:column headerText="Asignatura" filterBy="#{asig.asignatura}"
+			<p:column headerText="Asignatura" filterBy="#{asig.asignatura.referencia}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{asig.asignatura}" />
+				<p:outputLabel value="#{asig.asignatura.referencia}" />
 			</p:column>
 			
-			<p:column headerText="Grupo" filterBy="#{asig.g_AM}"
+			<p:column headerText="Grupo_Curso" filterBy="#{asig.g_AM.curso}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{asig.g_AM}" />
+				<p:outputLabel value="#{asig.g_AM.curso}" />
+			</p:column>
+			
+			<p:column headerText="Grupo_Letra" filterBy="#{asig.g_AM.letra}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{asig.g_AM.letra}" />
 			</p:column>
 	 	</p:dataTable>
          
