--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -31,7 +31,7 @@
         <div class="ui-fluid p-formgrid p-grid">
             <div class="p-field p-col-12 p-md-4">
                 <p:outputLabel for="@next" value="Basic"/>
-                <p:selectOneMenu id="option" value="#{exportar.selectedOption(selectedOption)}">
+                <p:selectOneMenu id="option" value="#{exportar.selectedOption}">
                     <f:selectItem itemLabel="Titulaciones" itemValue=""/>
                     <f:selectItem itemLabel="Ingeniería Informática" itemValue="1703"/>
                     <f:selectItem itemLabel="Ingeniería del Software" itemValue="1042"/>
