--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -53,52 +53,52 @@
 
 		<p:dataTable id="dtExpediente" value="#{expedienteBB.expediente}" var="e">
 		
-			<p:column headerText="Num_Expediente" filterBy="#{e.Num_Expediente}"
+			<p:column headerText="Num_Expediente" filterBy="#{e.num_Expediente}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.num_Expediente}" />
 			</p:column>
 			
-			<p:column headerText="Activo" filterBy="#{e.Activo}"
+			<p:column headerText="Activo" filterBy="#{e.activo}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.activo}" />
 			</p:column>
 			
-			<p:column headerText="Nota_Media" filterBy="#{e.Nota_Media}"
+			<p:column headerText="Nota_Media" filterBy="#{e.nota_Media}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.nota_Media}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_Superados" filterBy="#{e.Creditos_Superados}"
+			<p:column headerText="Creditos_Superados" filterBy="#{e.creditos_Superados}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_Superados}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_FB" filterBy="#{e.Creditos_FB}"
+			<p:column headerText="Creditos_FB" filterBy="#{e.creditos_FB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_FB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OB" filterBy="#{e.Creditos_OB}"
+			<p:column headerText="Creditos_OB" filterBy="#{e.creditos_OB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OP" filterBy="#{e.Creditos_OP}"
+			<p:column headerText="Creditos_OP" filterBy="#{e.creditos_OP}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OP}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_CF" filterBy="#{e.Creditos_CF}"
+			<p:column headerText="Creditos_CF" filterBy="#{e.creditos_CF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_CF}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_PE" filterBy="#{e.Creditos_PE}"
+			<p:column headerText="Creditos_PE" filterBy="#{e.creditos_PE}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_PE}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_TF" filterBy="#{e.Creditos_TF}"
+			<p:column headerText="Creditos_TF" filterBy="#{e.creditos_TF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_TF}" />
 			</p:column>
@@ -121,52 +121,52 @@
 
 		<p:dataTable id="dtExpediente" value="#{expedienteBB.expedientes}" var="e">
 		
-			<p:column headerText="Num_Expediente" filterBy="#{e.Num_Expediente}"
+			<p:column headerText="Num_Expediente" filterBy="#{e.num_Expediente}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.num_Expediente}" />
 			</p:column>
 			
-			<p:column headerText="Activo" filterBy="#{e.Activo}"
+			<p:column headerText="Activo" filterBy="#{e.activo}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.activo}" />
 			</p:column>
 			
-			<p:column headerText="Nota_Media" filterBy="#{e.Nota_Media}"
+			<p:column headerText="Nota_Media" filterBy="#{e.nota_Media}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.nota_Media}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_Superados" filterBy="#{e.Creditos_Superados}"
+			<p:column headerText="Creditos_Superados" filterBy="#{e.creditos_Superados}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_Superados}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_FB" filterBy="#{e.Creditos_FB}"
+			<p:column headerText="Creditos_FB" filterBy="#{e.creditos_FB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_FB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OB" filterBy="#{e.Creditos_OB}"
+			<p:column headerText="Creditos_OB" filterBy="#{e.creditos_OB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OP" filterBy="#{e.Creditos_OP}"
+			<p:column headerText="Creditos_OP" filterBy="#{e.creditos_OP}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OP}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_CF" filterBy="#{e.Creditos_CF}"
+			<p:column headerText="Creditos_CF" filterBy="#{e.creditos_CF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_CF}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_PE" filterBy="#{e.Creditos_PE}"
+			<p:column headerText="Creditos_PE" filterBy="#{e.creditos_PE}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_PE}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_TF" filterBy="#{e.Creditos_TF}"
+			<p:column headerText="Creditos_TF" filterBy="#{e.creditos_TF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_TF}" />
 			</p:column>
