--- a/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
@@ -49,17 +49,17 @@
 
 		<p:dataTable id="dtTitulacion" value="#{titulacion.titulacion}" var="t">
 		
-			<p:column headerText="Codigo" filterBy="#{t.Codigo}"
+			<p:column headerText="Codigo" filterBy="#{t.codigo}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{t.codigo}" />
 			</p:column>
 			
-			<p:column headerText="Nombre" filterBy="#{t.Nombre}"
+			<p:column headerText="Nombre" filterBy="#{t.nombre}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{t.nombre}" />
 			</p:column>
 			
-			<p:column headerText="Créditos" filterBy="#{t.Creditos}"
+			<p:column headerText="Créditos" filterBy="#{t.creditos}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{t.creditos}" />
 			</p:column>
@@ -79,17 +79,17 @@
 
 		<p:dataTable id="dtTitulacion" value="#{titulacion.titulaciones}" var="t">
 		
-			<p:column headerText="Codigo" filterBy="#{t.Codigo}"
+			<p:column headerText="Codigo" filterBy="#{t.codigo}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{t.codigo}" />
 			</p:column>
 			
-			<p:column headerText="Nombre" filterBy="#{t.Nombre}"
+			<p:column headerText="Nombre" filterBy="#{t.nombre}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{t.nombre}" />
 			</p:column>
 			
-			<p:column headerText="Créditos" filterBy="#{t.Creditos}"
+			<p:column headerText="Créditos" filterBy="#{t.creditos}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{t.creditos}" />
 			</p:column>
