--- a/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
@@ -15,53 +15,91 @@
 
 <h:body>
 
-	<div class="inicio">
-		<h:button value="INICIO" outcome="Principal.xhtml" />
-	</div>
 	<ui:fragment rendered="#{not empty infoSesion.alumno}">
 	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
 	</ui:fragment>
 	<ui:fragment rendered="#{not empty infoSesion.personal}">	
 	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.personal.rango}"/>.</p></div>
 	</ui:fragment>
-	
 	<h:form>
 	<div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div>
 	</h:form>
-	
-	<h1 class="titulo"> Leer Encuesta </h1>
+	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 
-		<div class="izquierda"   >
-			<b>MIS DATOS </b><br></br><br></br> 
-			<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
-			<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
+	
+	<h1 class="titulo"> Encuestas </h1>
+	<ui:fragment rendered="#{not empty infoSesion.alumno}">	
+	<div class="izquierda">
+		<b>MIS DATOS </b><br></br><br></br> 
+		<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
 			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
 			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
 			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
 			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
+	</div>
+		
+		<div class="centro">
+	 	<div class="izquierdaCentro">
+			<b>Encuestas: </b> <br></br>
 		</div>
 		
-		<h:form styleClass="centrado" >
+        <h:form id="encuesta">
+            <p:commandButton value="Mostar" actionListener="#{encuesta.encuesta}" update="dtEncuesta" />
+
+		<p:dataTable id="dtEncuesta" value="#{encuesta.encuesta}" var="enc">
 		
-		 <h:dataTable styleClass="card" value="#{encuestaBB.encuesta}" var="encues">
-             <h:column>
-                 <f:facet name="header">Fecha de envío</f:facet>
-                 <h:outputText value="#{encues.fecha_De_Envio}"/>
-             </h:column>
-             
-             <h:column>
-                 <f:facet name="header">Número de expediente</f:facet>
-                 <h:outputText value="#{encues.EE.num_Expediente}"/>
-             </h:column>  
-             
-             <h:column>
-                 <f:facet name="header">Grupos por asignaturas</f:facet>
-                 <h:outputText value="#{encues.gruposPorAsignaturas}"/>
-             </h:column>
-         </h:dataTable>
-	</h:form>
+			<p:column headerText="Número de expediente" filterBy="#{enc.EE.num_Expediente}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{enc.EE.num_Expediente}" />
+			</p:column>
+			
+			<p:column headerText="Fecha de envío" filterBy="#{enc.fecha_De_Envio}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{enc.fecha_De_Envio}" />
+			</p:column>
+			
+			<p:column headerText="Grupos por asignaturas" filterBy="#{enc.gruposPorAsignaturas}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{enc.gruposPorAsignaturas}" />
+			</p:column>
+	 	</p:dataTable>
+        </h:form>
+	 </div>
+	 </ui:fragment>
+	 
+	 <ui:fragment rendered="#{not empty infoSesion.personal}">
+	 <div class="centro">
+	 	<div class="izquierdaCentro">
+			<b>Encuestas: </b> <br></br>
+		</div>
+		
+        <h:form id="encuestaAlum">
+            <p:commandButton value="Mostar" actionListener="#{encuesta.encuestas}" update="dtEncuesta" />
+
+		<p:dataTable id="dtEncuesta" value="#{encuesta.encuestas}" var="encues">
+		
+			<p:column headerText="Número de expediente" filterBy="#{encues.EE.num_Expediente}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{encues.EE.num_Expediente}" />
+			</p:column>
+			
+			<p:column headerText="Fecha de envío" filterBy="#{encues.fecha_De_Envio}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{encues.fecha_De_Envio}" />
+			</p:column>
+			
+			<p:column headerText="Grupos por asignaturas" filterBy="#{encues.gruposPorAsignaturas}"
+				filterMatchMode="contains">
+				<p:outputLabel value="#{encues.gruposPorAsignaturas}" />
+			</p:column>
+	 	</p:dataTable>
+        </h:form>
+	 </div>
+	 </ui:fragment>
+
 	
 	<div class="pie"> 
 		Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es	
