--- a/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
@@ -27,7 +27,7 @@
 	<div class="centrado">	
 	    <h:form enctype="multipart/form-data">
 			<p:fileUpload value="#{fileUploadView.file}" mode="simple" skinSimple="true"/>
-            <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.upload}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
+            <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.uploadMatricula}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
             <p:growl id="messages" showDetail="true"/>
 		</h:form>
 	</div>
