--- a/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<title>LEER MATRICULA</title>
@@ -88,45 +89,51 @@
 
 	<ui:fragment rendered="#{not empty infoSesion.personal}">
 		<h:form styleClass="centrado">
-			<h:dataTable styleClass="card" value="#{matriculaBB.matriculas}"
-				var="mat">
-				<h:column>
-					<f:facet name="header">Curso Academico</f:facet>
-					<h:outputText value="#{mat.curso_Academico}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Estado</f:facet>
-					<h:outputText value="#{mat.estado}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Numero Archivo</f:facet>
-					<h:outputText value="#{mat.num_Archivo}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Turno Preferente</f:facet>
-					<h:outputText value="#{mat.turno_Preferente}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Fecha de Matricula</f:facet>
-					<h:outputText value="#{mat.fecha_De_Matricula}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Nuevo Ingreso</f:facet>
-					<h:outputText value="#{mat.nuevo_Ingreso}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Listado Asignaturas</f:facet>
-					<h:outputText value="#{mat.a}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Estado</f:facet>
-					<h:outputText value="#{mat.estado}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Expediente</f:facet>
-					<h:outputText value="#{mat.EM.num_Expediente}" />
-				</h:column>
-			</h:dataTable>
+		<p:commandButton value="Mostar" actionListener="#{matriculaBB.matriculas}" update="dtGrupos" />
+	
+			<p:dataTable id="dtGrupos" value="#{matriculaBB.matriculas}" var="m">
+	
+				<p:column headerText="Curso Academico" filterBy="#{m.curso_Academico}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.curso_Academico}" />
+				</p:column>
+	
+				<p:column headerText="Estado" filterBy="#{m.estado}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.estado}" />
+				</p:column>
+	
+				<p:column headerText="Numero Archivo" filterBy="#{m.num_Archivo}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.num_Archivo}" />
+				</p:column>
+	
+				<p:column headerText="Turno Preferente" filterBy="#{m.turno_Preferente}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.turno_Preferente}" />
+				</p:column>
+	
+				<p:column headerText="Fecha de matricula" filterBy="#{m.fecha_De_Matricula}"
+					 filterMatchMode="contains">
+					<p:outputLabel value="#{m.fecha_De_Matricula}" />
+				</p:column>
+	
+				<p:column headerText="Nuevo Ingreso" filterBy="#{m.nuevo_Ingreso}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.nuevo_Ingreso}" />
+				</p:column>
+	
+				<p:column headerText="Listado Asignaturas" filterBy="#{m.a}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.a}" />
+				</p:column>
+	
+				<p:column headerText="Expediente" filterBy="#{m.EM.num_Expediente}"
+					filterMatchMode="contains">
+					<p:outputLabel value="#{m.EM.num_Expediente}" />
+				</p:column>
+	
+			</p:dataTable>
 		</h:form>
 		<div class="importarMatricula">
 			<h:button value="Importar Matricula"
