--- a/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
@@ -34,7 +34,7 @@
 			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 	</div>
-
+<h:form>
 	<div class="centro">
 		<label for="curso">Primer curso:</label>
 		<select name="curso">
@@ -43,6 +43,10 @@
 		<label for="curso">Segundo curso:</label>
 		<select name="curso">
 		</select><br></br>
+		
+		<h:selectOneMenu value="#{encuesta.letra}">
+    		<f:selectItems value="#{encuesta.letras(2,1073)}" />
+		</h:selectOneMenu>
 		
 		<label for="curso">Tercero curso:</label>
 		<select name="curso">
@@ -56,6 +60,7 @@
 		<input type="submit" name="leerEncuesta" value="Enviar"/>
 		
 	</div>
+	</h:form>
 	
 	<div class="pie"> Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es </div>
 
