--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -105,6 +105,7 @@
 	 	</p:dataTable>
         </h:form>
 	 </div>
+	 
 	</ui:fragment>
 	
 	
@@ -174,7 +175,9 @@
         </h:form>
 	 </div>
 		
-		
+	<div class="importarExpediente">
+			<h:button value="Importar Expediente" outcome="ImportarExpediente.xhtml" />
+	</div>
 		
 	 
 		
