--- a/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
@@ -96,6 +96,11 @@
 	 	</p:dataTable>
         </h:form>
 	 </div>
+	 
+	 <div class="importarTitulacion">
+			<h:button value="Importar Titulación" outcome="ImportarTitulacion.xhtml" />
+	</div>
+	 
 	 </ui:fragment>
 
 	<div class="pie"> 
