--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -58,7 +58,8 @@
 			<h:button value="Asignaturas" outcome="LeerAsignaturas.xhtml" /> <br></br><br></br>
 			<h:button value="Centro" outcome="LeerCentro.xhtml" /> <br></br><br></br>
 			<h:button value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" /><br></br><br></br>
-			<h:button value="Exportar Datos" outcome="ExportarDatos.xhtml" /> 
+			<h:button value="Exportar Datos" outcome="ExportarDatos.xhtml" /><br></br><br></br>
+			<h:button value="Importar Horario" outcome="ImportarHorario.xhtml" />
 		</div>
 	</ui:fragment>
 	
