--- a/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
@@ -9,6 +9,7 @@
 
 <h:head>
 	<title>Importar Asignatura</title>
+	<h:outputStylesheet library="css" name="Estilos.css"  />
 	<h:outputStylesheet library="css" name="Layout.css"  />
 </h:head>
 
@@ -16,7 +17,7 @@
 		
 	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.personal.rango}"/>.</p></div>
 	
-	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.personal.rango}"/>.</p></div>
+	
 	
 	<h:form>
 	<div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div>
@@ -27,9 +28,17 @@
 
 	<div class="centrado">	
 	    <h:form enctype="multipart/form-data">
-			<p:fileUpload value="#{asignaturaBB.file}" mode="simple" skinSimple="true"/>
-            <p:commandButton value="Submit" ajax="false" action="#{asignaturaBB.upload}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
-            <p:growl id="messages" showDetail="true"/>
+			<p:growl id="messages" showDetail="true"/>
+       		 <p:fileUpload mode="advanced"
+                      multiple="false"
+                      sizeLimit="10240000" allowTypes="/(\.|\/)(xlsx)$/"
+                      invalidSizeMessage="Maximum file size allowed is 10 MB"
+                      invalidFileMessage="Solo se permite el tipo XLSX "
+                      update="messages cropperPanel"
+                      listener="#{uploadAsignatura.handleFileUpload}"/>
+                      
+                      
+             <p:outputPanel id="cropperPanel"></p:outputPanel>
 		</h:form>
 	</div>
 
