--- a/Grupo_L-war/src/main/webapp/LeerClase.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerClase.xhtml
@@ -39,7 +39,7 @@
 			<h:dataTable styleClass="card" value="#{claseBB.clases}" var="c">
 				<h:column>
 					<f:facet name="header">Asignatura</f:facet> 
-					<h:outputText value="#{c.AC.referencia}" />
+					<h:outputText value="#{c.AC.nombre}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">Dia</f:facet> 
