--- a/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
@@ -45,7 +45,7 @@
 		</select><br></br>
 		
 		<h:selectOneMenu value="#{encuesta.letra}">
-    		<f:selectItems value="#{encuesta.letras(2,1073)}" />
+    		<f:selectItems value="#{encuesta.letraSegundo}" />
 		</h:selectOneMenu>
 		
 		<label for="curso">Tercero curso:</label>
